Fix retina on mobile devices to not be cramped.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -331,6 +331,9 @@ aside {
 }
 
 img.retina, div.retina img {
-    width: 50%;
-    height: 50%;
+    max-width: 50%;
+    
+    @include media-query($on-palm) {
+        max-width: 100%;
+    }
 }
